corrected horizontal overflow

--- a/css/home.css
+++ b/css/home.css
@@ -84,6 +84,7 @@ footer{
 
 nav{
     background-color: rgba(0, 0, 102, 1);
+    width: 100%;
 }
 
 .menuBar{
